tests/fsharp/core/span/test2.bsl

test2.fsx(78,17,78,18): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

test2.fsx(78,21,78,35): typecheck error FS0406: The byref-typed variable 'test' is used in an invalid way. Byrefs cannot be captured by closures or passed to inner functions.

test2.fsx(78,21,78,35): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

test2.fsx(78,21,78,35): typecheck error FS0406: The byref-typed variable 'test' is used in an invalid way. Byrefs cannot be captured by closures or passed to inner functions.

test2.fsx(78,31,78,35): typecheck error FS0418: The byref typed value 'test' cannot be used at this point

test2.fsx(78,21,78,35): typecheck error FS0425: The type of a first-class function cannot contain byrefs

test2.fsx(78,21,78,35): typecheck error FS0425: The type of a first-class function cannot contain byrefs

test2.fsx(83,14,83,15): typecheck error FS3209: The address of the variable 'x' or a related expression cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(90,14,90,15): typecheck error FS3209: The address of the variable 'y' or a related expression cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(99,14,99,15): typecheck error FS3209: The address of the variable 'y' or a related expression cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(105,14,105,15): typecheck error FS3209: The address of the variable 'y' or a related expression cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(110,14,110,15): typecheck error FS3209: The address of the variable 'y' or a related expression cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(114,14,114,30): typecheck error FS3228: The address of a value returned from the expression cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(118,14,118,37): typecheck error FS3228: The address of a value returned from the expression cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(123,14,123,15): typecheck error FS3209: The address of the variable 'y' or a related expression cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(127,13,127,42): typecheck error FS3235: A Span or IsByRefLike value returned from the expression cannot be used at ths point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(131,14,131,42): typecheck error FS3228: The address of a value returned from the expression cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(135,14,135,72): typecheck error FS3228: The address of a value returned from the expression cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(139,13,139,52): typecheck error FS3235: A Span or IsByRefLike value returned from the expression cannot be used at ths point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(143,13,143,14): typecheck error FS3234: The Span or IsByRefLike variable 's' cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(148,13,148,52): typecheck error FS3235: A Span or IsByRefLike value returned from the expression cannot be used at ths point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(152,21,152,84): typecheck error FS3233: The function or method call cannot be used at this point, because one argument that is a byref of a non-stack-local Span or IsByRefLike type is used with another argument that is a stack-local Span or IsByRefLike type. This is to ensure the address of the local value does not escape its scope.

test2.fsx(153,13,153,14): typecheck error FS3234: The Span or IsByRefLike variable 'y' cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(157,13,157,83): typecheck error FS3235: A Span or IsByRefLike value returned from the expression cannot be used at ths point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(162,13,162,14): typecheck error FS3234: The Span or IsByRefLike variable 'y' cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(166,14,166,72): typecheck error FS3228: The address of a value returned from the expression cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(190,43,190,44): typecheck error FS3209: The address of the variable 'x' or a related expression cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(194,14,194,15): typecheck error FS3209: The address of the variable 'y' or a related expression cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(198,13,198,19): typecheck error FS3229: This value can't be assigned because the target 'x' may refer to non-stack-local memory, while the expression being assigned is assessed to potentially refer to stack-local memory. This is to help prevent pointers to stack-bound memory escaping their scope.

test2.fsx(203,26,203,27): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

test2.fsx(203,26,203,27): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

test2.fsx(203,26,203,27): typecheck error FS0406: The byref-typed variable 'inputSequence' is used in an invalid way. Byrefs cannot be captured by closures or passed to inner functions.

test2.fsx(203,26,203,27): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

test2.fsx(203,26,203,27): typecheck error FS0425: The type of a first-class function cannot contain byrefs

test2.fsx(203,26,203,27): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

test2.fsx(203,26,203,27): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

test2.fsx(203,26,203,27): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

test2.fsx(203,26,203,27): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

test2.fsx(208,13,208,18): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

test2.fsx(207,14,207,18): typecheck error FS0437: A type would store a byref typed value. This is not permitted by Common IL.

test2.fsx(213,13,213,18): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

test2.fsx(212,14,212,19): typecheck error FS0437: A type would store a byref typed value. This is not permitted by Common IL.

test2.fsx(221,18,221,23): typecheck error FS3228: The address of a value returned from the expression cannot be used at this point. This is to ensure the address of the local value does not escape its scope.

test2.fsx(230,17,230,18): typecheck error FS3234: The Span or IsByRefLike variable 's' cannot be used at this point. This is to ensure the address of the local value does not escape its scope.
